parser/tests/bad/str02.st
% max length of a 'string' must be a compile-time expression

var len: int
var str: string(len)
